--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -104,25 +104,25 @@
       "Maximum price: $1,024,800.00\n",
       "Mean price: $454,342.94\n",
       "Median price $438,900.00\n",
-      "Standard deviation of prices: $165,340.28\n"
+      "Standard deviation of prices: $165,171.13\n"
      ]
     }
    ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = prices.min()\n",
+    "minimum_price = np.min(prices)\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = prices.max()\n",
+    "maximum_price = np.max(prices)\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = prices.mean()\n",
+    "mean_price = np.mean(prices)\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = prices.median()\n",
+    "median_price = np.median(prices)\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = prices.std()\n",
+    "std_price = np.std(prices)\n",
     "\n",
     "# Show the calculated statistics\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: increase for LSTAT and PTRATIO. Using the command data.plot(x='MEDV',y='LSTAT', style='x'). I found that there are a correlation between LSTAT and MEDV. The same thing happens with PTRATIO (data.plot(x='MEDV',y='PTRATIO',style='o')). RM has a value of 6 will be worth more than the  RM value of 7, there high values in the interval between 6 and 7 for the value of RM. **"
+    "**Answer: increase for LSTAT and PTRATIO. Using the command data.plot(x='MEDV',y='LSTAT', style='x'). I found that there are a correlation between LSTAT and MEDV. The same thing happens with PTRATIO (data.plot(x='MEDV',y='PTRATIO',style='o')). A house with more rooms should worth more. A value of 6 be worth less than value of 7. **"
    ]
   },
   {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +280,7 @@
     "from sklearn.cross_validation import train_test_split\n",
     "\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, prices, train_size=0.8, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, prices, train_size=0.8, test_size=0.2,random_state=42)\n",
     "\n",
     "# Success\n",
     "print \"Training and testing split was successful.\""
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: I choose graph 3. The Graph 3 have the major Test Score .In all graphics, more training points increase the score ot the test, increase the accuracy of the model**"
+    "**Answer: I choose graph 3. The Graph 3 have the major Test Score .In all graphics, there are two phases. The first phase  where the test score increases with more training points. In the second phase, where the test score isn't affected by the adition of new training points. **"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The Grid Search technique allows a tunning of the parameters used by a model. Using a Grid search, a metaheuristc optimizate  the  model's parameters **"
+    "**Answer: The Grid Search technique allows a tunning of the parameters used by a model. Using a Grid search, a metaheuristc optimizate  the  model's parameters. The grid search exhaustively generates candidates from a grid of parameter values specified with the param_grid parameter.**"
    ]
   },
   {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -515,7 +515,7 @@
     "    cv_sets = ShuffleSplit(X.shape[0], n_iter = 10, test_size = 0.20, random_state = 0)\n",
     "\n",
     "\n",
-    "    regressor = DecisionTreeRegressor()\n",
+    "    regressor = DecisionTreeRegressor(random_state=42)\n",
     "\n",
     " \n",
     "    params =  {\"max_depth\": [1,2,3,4,5,6,7,8,9,10]}\n",
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -640,7 +640,13 @@
     "The Mean price are 454,342.94 and the Standard deviation of prices:  165,340.28\n",
     "75% of prices of the three clients are between 289002.66 and 619683.22\n",
     "Client 1 and Client 3  have prices between the Q1 and Q3 quantis and have reasonable estimates.\n",
-    "Client 2  have a value less than the Q1 quantil and it's a outlier. **"
+    "Client 2  have a value less than the Q1 quantil and it's a outlier.\n",
+    "It's possible to visualize the result by overlaying the prediction with histogram of the data as:\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.hist(prices, bins = 20)\n",
+    "for price in reg.predict(client_data):\n",
+    "plt.axvline(price, lw = 5, c = 'r')\n",
+    "**"
    ]
   },
   {
