Fix review suggestions

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: increase for LSTAT and PTRATIO. Using the command data.plot(x='MEDV',y='LSTAT', style='x'). I found that there are a correlation between LSTAT and MEDV. The same thing happens with PTRATIO (data.plot(x='MEDV',y='PTRATIO',style='o')). A house with more rooms should worth more. A value of 6 be worth less than value of 7. **"
+    "**Answer: increase for LSTAT and PTRATIO. Using the command data.plot(x='MEDV',y='LSTAT', style='x'). I found that there are a correlation between LSTAT and MEDV. The same thing happens with PTRATIO (data.plot(x='MEDV',y='PTRATIO',style='o')). A house with more rooms should worth more. A value of 6 be worth less than value of 7.LSTAT : Lower the LSTAT, higher should be the prices. PTRATIO : Lower the student teacher ratio, higher the price. **"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: I choose graph 3. The Graph 3 have the major Test Score .In all graphics, there are two phases. The first phase  where the test score increases with more training points. In the second phase, where the test score isn't affected by the adition of new training points. **"
+    "**Answer: I choose graph 3. The Graph 3 have the major Test Score .In all graphics, there are two phases. The first phase  where the test score increases with more training points. In the second phase, where the test score isn't affected by the adition of new training points. The training score was reduced with aditional training point, suffering of overfitling**"
    ]
   },
   {
@@ -471,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The k-fold cross-validation training technique allows  the partitioning a sample of data into subsets, multiple executions of cross-validation are performed using different partitions, and the results are averaged over the rounds.  The technique separates training and test sets without losing significant modelling or testing capability **"
+    "**Answer: The k-fold cross-validation training technique allows  the partitioning a sample of data into subsets, multiple executions of cross-validation are performed using different partitions, and the results are averaged over the rounds.  The technique separates training and test sets without losing significant modelling or testing capability. Without k-fold, there  are the chances of a model performs well on a specific train-test split but poorly otherwise. Without k-fold, the grid search could selects a model that performs well on k different train-test splits but poorly otherwise. **"
    ]
   },
   {
@@ -640,7 +640,7 @@
     "The Mean price are 454,342.94 and the Standard deviation of prices:  165,340.28\n",
     "75% of prices of the three clients are between 289002.66 and 619683.22\n",
     "Client 1 and Client 3  have prices between the Q1 and Q3 quantis and have reasonable estimates.\n",
-    "Client 2  have a value less than the Q1 quantil and it's a outlier.\n",
+    "Client 2  have a value less than the Q1 quantil and it's a outlier. But, could be a reasonable estimate when compared with similar cases. What is the average number of rooms for houses with a similar number of rooms, pupil to teacher ratio and percentage of \"los class\" homeowners in the area? \n",
     "It's possible to visualize the result by overlaying the prediction with histogram of the data as:\n",
     "import matplotlib.pyplot as plt\n",
     "plt.hist(prices, bins = 20)\n",
